#2386 Export of multiple centres: allow export of selected if selection is empty.
This change represents a more friendly behaviour of exporting multiple centres with only some of them having selected items. The rest are exported as empty sheets. The behaviour before this change was to throw an error about empty selection.